--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
       <head>
             <meta charset="UTF-8" />
-            <link rel="icon" type="image/svg+xml" href="/icon.png" />
+            <link rel="icon" type="image/svg+xml" href="/logo.jpg" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <link href="https://api.fontshare.com/v2/css?f[]=satoshi@500&display=swap" rel="stylesheet" />
             <title>Movies Flix</title>
