Improved UI and indicator and fixes loader issues

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
       <head>
             <meta charset="UTF-8" />
-            <link rel="icon" type="image/svg+xml" href="/logo.jpg" />
+            <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+            <link rel="apple-touch-icon" sizes="180x180" href="/logo.svg" />
+            <meta name="theme-color" content="#3D4432" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <link href="https://api.fontshare.com/v2/css?f[]=satoshi@500&display=swap" rel="stylesheet" />
-            <title>Movies Flix</title>
+            <title>MoviesFlix</title>
       </head>
       <body>
             <div id="root"></div>
