Enhance SEO and social sharing features in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,53 @@
             <meta name="theme-color" content="#3D4432" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <link href="https://api.fontshare.com/v2/css?f[]=satoshi@500&display=swap" rel="stylesheet" />
-            <title>MoviesFlix</title>
+            <title>MoviesFlix — Movie & TV Streaming Platform</title>
+            <meta name="description" content="MoviesFlix — a streaming platform with integrated video playback, powerful search, and a unique, premium UI (LiquidGlass, Orb, Dock). Not a UI clone — a working streaming product for movies and TV shows." />
+            <meta name="keywords" content="movies, tv shows, streaming platform, video streaming, movie player, trailers, HLS, Vite React, Tailwind, MoviesFlix" />
+            <meta name="robots" content="index, follow" />
+            <meta property="og:type" content="website" />
+            <meta property="og:title" content="MoviesFlix — Purposeful Movie & TV Streaming Platform" />
+            <meta property="og:description" content="Integrated video playback, cinematic UI, fast search, and detailed pages for movies, TV shows, and people. Play full-length content and trailers in a unified player." />
+            <meta property="og:url" content="https://themoviesflix.vercel.app/" />
+            <meta name="twitter:card" content="summary_large_image" />
+            <meta name="twitter:title" content="MoviesFlix — Movie & TV Streaming Platform" />
+            <meta name="twitter:description" content="Integrated video playback, cinematic UI, fast search, and detailed pages for movies, TV shows, and people. Play full-length content and trailers in a unified player." />
+            <link rel="canonical" href="https://themoviesflix.vercel.app/" />
+            <script type="application/ld+json">
+                  {
+                        "@context": "https://schema.org",
+                        "@graph": [
+                              {
+                                    "@type": "WebSite",
+                                    "@id": "https://themoviesflix.vercel.app/#website",
+                                    "url": "https://themoviesflix.vercel.app/",
+                                    "name": "MoviesFlix",
+                                    "description": "MoviesFlix is a purpose-built streaming platform with integrated playback for movies, trailers and episodic TV.",
+                                    "publisher": {
+                                          "@id": "https://themoviesflix.vercel.app/Ahmad"
+                                    }
+                              },
+                              {
+                                    "@type": "Organization",
+                                    "@id": "https://themoviesflix.vercel.app/Ahmad",
+                                    "name": "MoviesFlix",
+                                    "url": "https://themoviesflix.vercel.app/"
+                              },
+                              {
+                                    "@type": "VideoObject",
+                                    "name": "Sample Trailer - MoviesFlix",
+                                    "description": "Trailer demonstrating MoviesFlix integrated streaming player and cinematic UI.",
+                                    "uploadDate": "2025-01-01",
+                                    "duration": "PT2M30S",
+                                    "interactionStatistic": {
+                                          "@type": "InteractionCounter",
+                                          "interactionType": { "@type": "WatchAction" },
+                                          "userInteractionCount": 0
+                                    }
+                              }
+                        ]
+                  }
+            </script>
       </head>
       <body>
             <div id="root"></div>
