Remove Logo component export from UI index and add click sound file to public assets

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <link href="https://api.fontshare.com/v2/css?f[]=satoshi@500&display=swap" rel="stylesheet" />
             <title>MoviesFlix — Movie & TV Streaming Platform</title>
-            <meta name="description" content="MoviesFlix — a streaming platform with integrated video playback, powerful search, and a unique, premium UI (LiquidGlass, Orb, Dock). Not a UI clone — a working streaming product for movies and TV shows." />
+            <meta name="description" content="MoviesFlix — a streaming platform with integrated video — a working streaming product for movies and TV shows." />
             <meta name="keywords" content="movies, tv shows, streaming platform, video streaming, movie player, trailers, HLS, Vite React, Tailwind, MoviesFlix" />
             <meta name="robots" content="index, follow" />
             <meta property="og:type" content="website" />
