added google site verification as a tag

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <meta name="twitter:title" content="MoviesFlix — Movie & TV Streaming Platform" />
             <meta name="twitter:description" content="Integrated video playback, cinematic UI, fast search, and detailed pages for movies, TV shows, and people. Play full-length content and trailers in a unified player." />
             <link rel="canonical" href="https://themoviesflix.vercel.app/" />
+            <meta name="google-site-verification" content="F595ySKfUheIN2ug2CMFzHeVQNsscpVcx4VcTNMiIrs" />
             <script type="application/ld+json">
                   {
                         "@context": "https://schema.org",
