--- a/index.html
+++ b/index.html
@@ -8,16 +8,29 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <link href="https://api.fontshare.com/v2/css?f[]=satoshi@500&display=swap" rel="stylesheet" />
             <title>MoviesFlix | Movie & TV Streaming Platform</title>
-            <meta name="description" content="MoviesFlix | A streaming platform with integrated video — a working streaming product for movies and TV shows." />
-            <meta name="keywords" content="movies, tv shows, streaming platform, video streaming, movie player, trailers, HLS, Vite React, Tailwind, MoviesFlix" />
+            <meta name="description" content="MoviesFlix | A streaming platform with integrated video a working streaming product for movies and TV shows." />
+            <meta name="keywords" content="movies, tv shows, streaming platform, video streaming, movie player, trailers, HLS, Vite React, Tailwind, MoviesFlix, babar azam, imran khan, lahore, kidscartoon, adult movies" />
             <meta name="robots" content="index, follow" />
+
+            <!-- Open Graph / Facebook -->
             <meta property="og:type" content="website" />
             <meta property="og:title" content="MoviesFlix | Purposeful Movie & TV Streaming Platform" />
             <meta property="og:description" content="Integrated video playback, cinematic UI, fast search, and detailed pages for movies, TV shows, and people. Play full-length content and trailers in a unified player." />
             <meta property="og:url" content="https://themoviesflix.vercel.app/" />
+            <meta property="og:image" content="/ogimage.webp" />
+            <meta property="og:image:width" content="1200" />
+            <meta property="og:image:height" content="630" />
+            <meta property="og:image:alt" content="MoviesFlix | cinematic movie & TV streaming platform" />
+
+            <!-- Twitter -->
             <meta name="twitter:card" content="summary_large_image" />
             <meta name="twitter:title" content="MoviesFlix — Movie & TV Streaming Platform" />
             <meta name="twitter:description" content="Integrated video playback, cinematic UI, fast search, and detailed pages for movies, TV shows, and people. Play full-length content and trailers in a unified player." />
+            <meta name="twitter:image" content="/ogimage.webp" />
+            <meta name="twitter:image:alt" content="MoviesFlix — cinematic movie & TV streaming platform" />
+
+            <!-- Generic image link -->
+            <link rel="image_src" href="https://themoviesflix.vercel.app/ogimage.webp" />
             <link rel="canonical" href="https://themoviesflix.vercel.app/" />
             <meta name="google-site-verification" content="F595ySKfUheIN2ug2CMFzHeVQNsscpVcx4VcTNMiIrs" />
             <script type="application/ld+json">
@@ -29,7 +42,7 @@
                                     "@id": "https://themoviesflix.vercel.app/#website",
                                     "url": "https://themoviesflix.vercel.app/",
                                     "name": "MoviesFlix",
-                                    "description": "MoviesFlix is a purpose-built streaming platform with integrated playback for movies, trailers and episodic TV.",
+                                    "description": "MoviesFlix is a streaming platform with integrated playback for movies, trailers and episodic TV.",
                                     "publisher": {
                                           "@id": "https://themoviesflix.vercel.app/Ahmad"
                                     }
