--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
       <head>
             <meta charset="UTF-8" />
-            <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-            <link rel="apple-touch-icon" sizes="180x180" href="/logo.svg" />
-            <meta name="theme-color" content="#1a1a1a" />
+            <link rel="icon" type="image/png" href="/favicon.png" />
+            <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
+            <meta name="theme-color" content="#14120b" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <link href="https://api.fontshare.com/v2/css?f[]=satoshi@500&display=swap" rel="stylesheet" />
             <title>MoviesFlix | Movie & TV Streaming Platform</title>
             <meta name="description" content="MoviesFlix | A streaming platform with integrated video a working streaming product for movies and TV shows." />
             <meta name="keywords" content="movies, tv shows, streaming platform, video streaming, movie player, trailers, HLS, Vite React, Tailwind, MoviesFlix, babar azam, imran khan, lahore, kidscartoon, adult movies" />
             <meta name="robots" content="index, follow" />
+            <link rel="manifest" href="./PWA/manifest.json" />
 
             <!-- Open Graph / Facebook -->
             <meta property="og:type" content="website" />
@@ -60,5 +61,17 @@
       <body>
             <div id="root" aria-hidden="true" tabindex="-1"></div>
             <script type="module" src="/src/main.jsx"></script>
+            <script>
+                  if ("serviceWorker" in navigator) {
+                        navigator.serviceWorker
+                              .register("./PWA/serviceworker.js")
+                              .then((reg) => {
+                                    console.log("Success at ", reg);
+                              })
+                              .catch((err) => {
+                                    console.log("Failed to load the service worker", err.message);
+                              });
+                  }
+            </script>
       </body>
 </html>
