--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </script>
       </head>
       <body>
-            <div id="root" aria-hidden="true" tabindex="-1"></div>
+            <div id="root"></div>
             <script type="module" src="/src/main.jsx"></script>
             <script>
                   if ("serviceWorker" in navigator) {
