fixed the link in index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <meta name="description" content="MoviesFlix | A streaming platform with integrated video a working streaming product for movies and TV shows." />
             <meta name="keywords" content="movies, tv shows, streaming platform, video streaming, movie player, trailers, HLS, Vite React, Tailwind, MoviesFlix, babar azam, imran khan, lahore, kidscartoon, adult movies" />
             <meta name="robots" content="index, follow" />
-            <link rel="manifest" href="./PWA/manifest.json" />
+            <link rel="manifest" href="/manifest.json" />
 
             <!-- Open Graph / Facebook -->
             <meta property="og:type" content="website" />
