--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
       <head>
             <meta charset="UTF-8" />
-            <link rel="icon" type="image/png" href="/favicon.png" />
-            <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
-            <meta name="theme-color" content="#14120b" />
+            <link rel="icon" type="image/png" href="/appicon-628-631.png" />
+            <link rel="apple-touch-icon" sizes="628x631" href="/appicon-628-631.png" />
+            <meta name="theme-color" content="#1a1a1a" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <link href="https://api.fontshare.com/v2/css?f[]=satoshi@500&display=swap" rel="stylesheet" />
             <title>MoviesFlix | Movie & TV Streaming Platform</title>
