some color changes for contrast issue

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-8" />
             <link rel="icon" type="image/png" href="/appicon-628-631.png" />
             <link rel="apple-touch-icon" sizes="628x631" href="/appicon-628-631.png" />
-            <meta name="theme-color" content="#1a1a1a" />
+            <meta name="theme-color" content="#f6f6f6" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <link href="https://api.fontshare.com/v2/css?f[]=satoshi@500&display=swap" rel="stylesheet" />
             <title>MoviesFlix | Movie & TV Streaming Platform</title>
