--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
       <head>
             <meta charset="UTF-8" />
-            <link rel="icon" type="image/png" href="/appicon-small.png" />
+            <link rel="icon" type="image/png" href="/favicon.png" />
             <link rel="apple-touch-icon" sizes="628x631" href="/appicon-small.png" />
             <meta name="theme-color" content="#201d1d" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
