Refactor service worker registration path, update project name, enhance TV details page with season selection, and add animated icons for better user experience.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <script>
                   if ("serviceWorker" in navigator) {
                         navigator.serviceWorker
-                              .register("./PWA/serviceworker.js")
+                              .register("/serviceworker.js")
                               .then((reg) => {
                                     console.log("Success at ", reg);
                               })
